# scrapix-v2

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  AUDIT.md  CLAUDE.md  Cargo.toml  DEPENDENCY_MANAGEMENT.md  Dockerfile  Dockerfile.dev  Dockerfile.heroku  FIRECRAWL_ANALYSIS.md  GAP_ANALYSIS.md  PROXY_ENDPOINTS.md  Procfile.dev  README.md  ROADMAP.md  SCRAPIX_ANALYSIS.md  docker-compose.dev.yml  docker-compose.yml  eslint.config.mjs  justfile  package.json  tsconfig.base.json  tsconfig.json  turbo.json
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml  release.yml
.serena/: project.yml
apps/cli/: README.md  package.json  tsconfig.json
apps/cli/src/: index.ts  setup-storage.ts
apps/core/: README.md  package.json  tsconfig.json
apps/core/src/: constants.ts  container.ts  index.ts  sender.ts  types.ts  webhook.ts
apps/proxy/: Dockerfile  README.md  fly.toml  package.json
apps/server/: Dockerfile  README.md  fly.toml  package.json  tsconfig.json
apps/server/src/: crawler_process.ts  index.ts  taskQueue.ts  telemetry.ts
benches/: Cargo.toml
benches/benches/: integrated_benchmarks.rs  wikipedia_e2e.rs
benches/src/: lib.rs
bins/scrapix/: Cargo.toml
bins/scrapix-api/: Cargo.toml
bins/scrapix-api/src/: analytics.rs  auth.rs  billing.rs  configs.rs  email.rs  email_scheduler.rs  engines.rs  jobs_db.rs  lib.rs  main.rs  mcp.rs  openapi.rs  rate_limit.rs  stripe.rs
bins/scrapix-api/src/auth/: handlers.rs  jwt.rs  middleware.rs  mod.rs  oauth.rs  social.rs
bins/scrapix-api/src/auth/handlers/: account.rs  api_keys.rs  auth.rs  billing.rs  mod.rs  team.rs
bins/scrapix-cli/: Cargo.toml
bins/scrapix-cli/src/: client.rs  config.rs  lib.rs  main.rs  output.rs  types.rs
bins/scrapix-cli/src/commands/: analytics.rs  api_keys.rs  auth.rs  billing.rs  configs.rs  crawl.rs  diagnostics.rs  engines.rs  infra.rs  k8s.rs  local.rs  map.rs  mod.rs  scrape.rs  search.rs  team.rs
bins/scrapix-frontier-service/: Cargo.toml
bins/scrapix-frontier-service/src/: lib.rs  main.rs
bins/scrapix-mcp/: Cargo.toml
bins/scrapix-mcp/src/: main.rs
bins/scrapix-worker-content/: Cargo.toml
bins/scrapix-worker-content/src/: lib.rs  main.rs
bins/scrapix-worker-crawler/: Cargo.toml
bins/scrapix-worker-crawler/src/: lib.rs  main.rs
bins/scrapix/src/: all.rs  main.rs
console/: Dockerfile  Dockerfile.dev  heroku.yml  package-lock.json  package.json  supabase-schema.sql
console/src/: middleware.ts
console/src/app/: globals.css  layout.tsx  providers.tsx
console/src/lib/: api.ts  (+5 more)
crates/scrapix-ai/: Cargo.toml
crates/scrapix-ai/src/: client.rs  embedding.rs  extraction.rs  lib.rs  summary.rs
crates/scrapix-ai/src/providers/: anthropic.rs  gemini.rs  mistral.rs  mod.rs  openai.rs
crates/scrapix-auth/: Cargo.toml
crates/scrapix-auth/src/: jwt.rs  lib.rs  password.rs  rate_limit.rs  types.rs
crates/scrapix-billing/: Cargo.toml
crates/scrapix-billing/src/: auto_topup.rs  credits.rs  error.rs  ledger.rs  lib.rs  pricing.rs
crates/scrapix-core/: Cargo.toml
crates/scrapix-core/src/: billing.rs  config.rs  document.rs  error.rs  lib.rs  telemetry.rs  traits.rs
crates/scrapix-crawler/: Cargo.toml
crates/scrapix-crawler/examples/: test_browser.rs
crates/scrapix-crawler/src/: dns.rs  extractor.rs  fetcher.rs  lib.rs  proxy.rs  renderer_cdp.rs  renderer_webdriver.rs  robots.rs  sitemap.rs
crates/scrapix-extractor/: Cargo.toml
crates/scrapix-extractor/src/: blocks.rs  lib.rs  metadata.rs  schema.rs  selectors.rs
crates/scrapix-frontier/: Cargo.toml
crates/scrapix-frontier/benches/: frontier_benchmarks.rs
crates/scrapix-frontier/src/: dedup.rs  history.rs  lib.rs  linkgraph.rs  partition.rs  politeness.rs  priority.rs  recrawl.rs  simhash.rs
crates/scrapix-parser/: Cargo.toml
crates/scrapix-parser/benches/: parser_benchmarks.rs
crates/scrapix-parser/src/: html.rs  language.rs  lib.rs  markdown.rs  minihtml.rs  readability.rs
crates/scrapix-queue/: Cargo.toml
crates/scrapix-queue/src/: bus.rs  channel.rs  consumer.rs  lib.rs  producer.rs  topics.rs  traits.rs
crates/scrapix-storage/: Cargo.toml
crates/scrapix-storage/src/: clickhouse.rs  lib.rs  meilisearch.rs  object_storage.rs  redis.rs  rocks.rs
crates/scrapix-telemetry/: Cargo.toml
crates/scrapix-telemetry/src/: lib.rs  logging.rs  metrics.rs  otel.rs
data/crawler-rocksdb/: IDENTITY  LOG  MANIFEST-000005  OPTIONS-000007
deploy/heroku/: setup.sh
deploy/monitoring/: docker-compose.yml
deploy/postgres/: init.sql
docs/: PERFORMANCE_ANALYSIS.md  architecture.mdx  deploy-scaleway.md  introduction.mdx  mint.json  quickstart.mdx
docs/api-reference/: analytics.mdx  authentication.mdx  configs.mdx  crawl.mdx  diagnostics.mdx  engines.mdx  jobs.mdx  map.mdx  overview.mdx  rate-limiting.mdx  scrape.mdx  search.mdx  websockets.mdx
docs/configuration/: cli-reference.mdx  crawl-configs.mdx  environment-variables.mdx
docs/deployment/: aws.mdx  azure.mdx  coolify.mdx  docker-compose.mdx  fly-io.mdx  google-cloud-run.mdx  heroku.mdx  hetzner-vps.mdx  kubernetes.mdx  overview.mdx  railway.mdx  render.mdx
docs/guides/: ai-enrichment.mdx  authentication.mdx  billing.mdx  crawling.mdx  mcp.mdx  oauth.mdx  real-time-events.mdx  scraping.mdx
docs/infrastructure/: clickhouse.mdx  kafka-redpanda.mdx  meilisearch.mdx  postgresql.mdx
docs/operations/: monitoring.mdx  scaling.mdx  troubleshooting.mdx
examples/: ai-enrichment.json  documentation-site.json  ecommerce-products.json  simple-crawl.json  wikipedia-10k.json  with-proxy.json
scripts/: bench.sh  deploy-proxy-multiregion.sh  deploy-proxy-regional-apps.sh  deploy-proxy.sh  deploy-server.sh  k8s.sh  monitor.sh  scrapix-dev  test-crawl.sh
tests/: Cargo.toml
tests/src/: billing_accuracy.rs  concurrency.rs  config_validation.rs  crawl_pipeline.rs  dns_cache.rs  document_uid.rs  domain_safety.rs  e2e_pipeline.rs  error_resilience.rs  frontier.rs  incremental_crawling.rs  job_lifecycle.rs  lib.rs  link_graph.rs  message_contracts.rs  parser_extractor.rs  simhash_properties.rs  url_normalization.rs
(+160 files in other folders)
