[package]
name = "scrapix-tests"
description = "Integration tests for Scrapix"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
# Core crates to test
scrapix-core = { path = "../crates/scrapix-core" }
scrapix-parser = { path = "../crates/scrapix-parser" }
scrapix-extractor = { path = "../crates/scrapix-extractor" }
scrapix-frontier = { path = "../crates/scrapix-frontier" }
scrapix-crawler = { path = "../crates/scrapix-crawler" }
scrapix-queue = { path = "../crates/scrapix-queue" }

# Async runtime
tokio = { workspace = true }

# HTTP mocking
wiremock = { workspace = true }

# Validation
validator = { workspace = true }

# Utilities
serde_json = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }

[lib]
name = "scrapix_tests"
path = "src/lib.rs"

[[test]]
name = "parser_extractor"
path = "src/parser_extractor.rs"

[[test]]
name = "frontier"
path = "src/frontier.rs"

[[test]]
name = "crawl_pipeline"
path = "src/crawl_pipeline.rs"

[[test]]
name = "incremental_crawling"
path = "src/incremental_crawling.rs"

[[test]]
name = "link_graph"
path = "src/link_graph.rs"

[[test]]
name = "dns_cache"
path = "src/dns_cache.rs"

[[test]]
name = "message_contracts"
path = "src/message_contracts.rs"

[[test]]
name = "config_validation"
path = "src/config_validation.rs"

[[test]]
name = "url_normalization"
path = "src/url_normalization.rs"

[[test]]
name = "error_resilience"
path = "src/error_resilience.rs"

[[test]]
name = "billing_accuracy"
path = "src/billing_accuracy.rs"

[[test]]
name = "domain_safety"
path = "src/domain_safety.rs"

[[test]]
name = "concurrency"
path = "src/concurrency.rs"

[[test]]
name = "job_lifecycle"
path = "src/job_lifecycle.rs"

[[test]]
name = "document_uid"
path = "src/document_uid.rs"

[[test]]
name = "simhash_properties"
path = "src/simhash_properties.rs"
