[package]
name = "scrapix-api"
description = "REST/GraphQL API server for Scrapix"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "scrapix_api"
path = "src/lib.rs"

[[bin]]
name = "scrapix-api"
path = "src/main.rs"

[dependencies]
scrapix-core = { path = "../../crates/scrapix-core" }
scrapix-billing = { path = "../../crates/scrapix-billing" }
scrapix-auth = { path = "../../crates/scrapix-auth" }
scrapix-queue = { path = "../../crates/scrapix-queue" }
scrapix-storage = { path = "../../crates/scrapix-storage" }
scrapix-parser = { path = "../../crates/scrapix-parser" }
scrapix-extractor = { path = "../../crates/scrapix-extractor" }
scrapix-crawler = { path = "../../crates/scrapix-crawler", features = ["browser-cdp"] }
scrapix-ai = { path = "../../crates/scrapix-ai" }

# HTTP client for /scrape endpoint
reqwest = { workspace = true }
scraper = { workspace = true }

tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

# Web framework
axum = { workspace = true }
tower-http = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
url = { workspace = true }
time = { workspace = true }

# CLI
clap = { workspace = true }

# Async utilities
parking_lot = { workspace = true }
tokio-stream = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Auth
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "tls-rustls"] }
sha2 = "0.10"
hex = "0.4"
argon2 = "0.5"
jsonwebtoken = "9"
axum-extra = { version = "0.10", features = ["cookie"] }
rand = { workspace = true }

# OAuth
base64 = { workspace = true }

# Rate limiting
redis = { workspace = true }
dashmap = { workspace = true }

# URL encoding for OAuth redirects
urlencoding = "2.1"

# MCP HTTP transport
rmcp = { version = "1.2", features = ["server", "transport-streamable-http-server"] }
rmcp-openapi = "0.25"

# Cron scheduling
croner = "3"

# Stripe payments
async-stripe = { version = "0.38", default-features = false, features = ["runtime-tokio-hyper", "checkout", "billing", "connect", "webhook-events"] }
hmac = "0.12"

# OpenAPI
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }
