[package]
name = "scrapix-cli"
description = "Command-line interface for Scrapix"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "scrapix_cli"
path = "src/lib.rs"

[[bin]]
name = "scrapix"
path = "src/main.rs"

[dependencies]
scrapix-core = { path = "../../crates/scrapix-core" }
scrapix-parser = { path = "../../crates/scrapix-parser" }
scrapix-extractor = { path = "../../crates/scrapix-extractor" }

# HTML parsing for local crawl
scraper = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

# Pretty output
colored = "2.1"
indicatif = "0.17"
tabled = "0.15"
urlencoding = "2.1"
