[package]
name = "scrapix-mcp"
description = "MCP server exposing all Scrapix API endpoints as tools for AI agents"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "scrapix-mcp"
path = "src/main.rs"

[dependencies]
# MCP SDK
rmcp = { version = "1.2", features = ["server", "transport-io"] }
rmcp-openapi = "0.25"

# HTTP client (for fetching OpenAPI spec and passing headers)
reqwest = { workspace = true }
url = { workspace = true }

# Async runtime
tokio = { workspace = true }

# CLI
clap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
