[package]
name = "scrapix-worker-content"
description = "Content processing worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "scrapix-worker-content"
path = "src/main.rs"

[dependencies]
scrapix-core = { path = "../../crates/scrapix-core" }
scrapix-extractor = { path = "../../crates/scrapix-extractor" }
scrapix-frontier = { path = "../../crates/scrapix-frontier" }
scrapix-parser = { path = "../../crates/scrapix-parser" }
scrapix-storage = { path = "../../crates/scrapix-storage" }
scrapix-queue = { path = "../../crates/scrapix-queue" }
scrapix-telemetry = { path = "../../crates/scrapix-telemetry" }
scrapix-ai = { path = "../../crates/scrapix-ai" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
