[package]
name = "scrapix-ai"
description = "AI-powered extraction and enrichment"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
scrapix-core = { path = "../scrapix-core" }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# OpenAI client
async-openai = { workspace = true }

# HTTP client for non-OpenAI providers
reqwest = { workspace = true }

# Token counting
tiktoken-rs = { workspace = true }

# Time
chrono = { workspace = true }

# Tracing
tracing = { workspace = true }
