[package]
name = "scrapix-parser"
description = "HTML parsing and content extraction"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
scrapix-core = { path = "../scrapix-core" }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# HTML parsing
scraper = { workspace = true }
html5ever = { workspace = true }
ego-tree = "0.10.0"

# URL handling
url = { workspace = true }

# Markdown conversion
html2md = { workspace = true }

# Language detection
whatlang = { workspace = true }

# Utilities
regex = { workspace = true }

# Tracing
tracing = { workspace = true }

# For tests
chrono = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "parser_benchmarks"
harness = false
