[package]
name = "scrapix-storage"
description = "Storage backends for Scrapix"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
scrapix-core = { path = "../scrapix-core" }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Meilisearch (primary store: search + metadata + vectors)
meilisearch-sdk = { workspace = true }

# RocksDB (local per-worker state)
rocksdb = { workspace = true }

# Redis/DragonflyDB (rate limiting, caching)
redis = { workspace = true }

# S3-compatible object storage (RustFS, MinIO, AWS S3)
rust-s3 = "0.34"

# Utilities
bytes = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
sha2 = { workspace = true }
url = { workspace = true }

# Tracing
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
